# intro_LangGraph

./: .gitignore  main.py  pyproject.toml  requirements.txt
module-0/: basics.py
module-1/studio/: agent_m1.py  agent_memory.py  chain_m1.py  langgraph.json  langgraph_.json  simple_graph_m1.py
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-2/studio/: filter_trimm_mesg.py  langgraph.json  multiple_schemas.py  summarizing_bot_with_memory.py
